examples/ok/hello.kl
@Use("java")
public void main(){
    println("Hello world");

    return null;
}