examples/error/doubleLiteralMisuse.kl
@Use("java")
public void main() {
    println(3.14);
    return;
}
